add background image to home page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Chance the Rapper</title>
 </head>
-<body>
+<body background="chance3.png">
 This is a site about Chancelor Bennet. Artist name: Chance the Rapper aka lil Chano from the 79th.
 </body>
 </html>
