--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Chance the Rapper</title>
 </head>
-<body background="chance3.png">
+<body background="chance3.png" text="white">
 This is a site about Chancelor Bennet. Artist name: Chance the Rapper aka lil Chano from the 79th.
 </body>
 </html>
