Update the home page with required elelements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
 	<title>Chance the Rapper</title>
 </head>
 <body background="chance3.png" text="white">
-This is a site about Chancelor Bennet. Artist name: Chance the Rapper aka lil Chano from the 79th.
+<div>
+<h1>Artist Spotlight</h1>
+<p>This is a site about Chancelor Bennet.</p>
+<p>Artist name: Chance the Rapper aka lil Chano from the 79th.</p>
+</div>
+<div>
+	<form name="Favorite song!" action="thanks.html" method="post">
+	<div>
+      <label>What's your favorite Chance track?</label>
+      <input type="text" name="fav-track" placeholder="Track">
+    </div>
+	<button type="submit">Submit</button>
+	</form>
+</div>
+<div>
+	<p>
+	<a href="http://chanceraps.com/">Here's</a> Chance's website! It's nice. I recognize a lot of the html elements used.  <br>It looks like there's some scripts and some squarespace stuff which I am unfamiliar with. Scripts run javascript scripts. <br>I'm not sure how Squarespace works on sites.
+	</p>
+</div>
+<div>
+	<p><a href="https://images.alphacoders.com/664/664511.png">Here's</a> the image source.</p>
+</div>
 </body>
 </html>
