tries to fix 405 error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>Artist name: Chance the Rapper aka lil Chano from the 79th.</p>
 </div>
 <div>
-	<form name="Favorite song!" action="thanks.html" method="post">
+	<form name="Favorite song!" action="thanks.html">
 	<div>
       <label>What's your favorite Chance track?</label>
       <input type="text" name="fav-track" placeholder="Track">
@@ -20,7 +20,7 @@
 </div>
 <div>
 	<p>
-	<a href="http://chanceraps.com/">Here's</a> Chance's website! It's nice. I recognize a lot of the html elements used.  <br>It looks like there's some scripts and some squarespace stuff which I am unfamiliar with. Scripts run javascript scripts. <br>I'm not sure how Squarespace works on sites.
+	<a href="http://chanceraps.com/">Here's</a> Chance's website! It's nice. I recognize a lot of the html elements used.  <br>It looks like there's a script tag and some squarespace stuff which I am unfamiliar with. Script run javascript scripts. <br>I'm not sure how Squarespace works on sites.
 	</p>
 </div>
 <div>
