link a style sheet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Chance the Rapper</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body background="chance3.png" text="white">
 <div>
