finished the site

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<title>Chance the Rapper</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body background="chance3.png" text="white">
+<body>
 <div>
-<h1>Artist Spotlight</h1>
-<p>This is a site about Chancelor Bennet.</p>
+<h1 id="spotlight">Artist Spotlight</h1>
+<h2 class="yellowspot">Chance the Rapper</h2>
+<p id="first">This is a site about Chancelor Bennet.</p>
 <p>Artist name: Chance the Rapper aka lil Chano from the 79th.</p>
 </div>
 <div>
@@ -26,6 +27,9 @@
 </div>
 <div>
 	<p><a href="https://images.alphacoders.com/664/664511.png">Here's</a> the image source.</p>
+</div>
+<div>
+	<img id="chancehead" alt="Chance's Face" src="chance4.png">
 </div>
 </body>
 </html>
