--- a/index.html
+++ b/index.html
@@ -1,35 +1,171 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chance the Rapper</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/application.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="js/application.js"></script>
+    <div id="load">
+      <audio id="bass.1.1" preload="auto">
+        <source src="ogg/bass.1.1.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.2" preload="auto">
+        <source src="ogg/bass.1.2.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.3" preload="auto">
+        <source src="ogg/bass.1.3.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.4" preload="auto">
+        <source src="ogg/bass.1.4.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.5" preload="auto">
+        <source src="ogg/bass.1.5.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.6" preload="auto">
+        <source src="ogg/bass.1.6.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.7" preload="auto">
+        <source src="ogg/bass.1.7.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.8" preload="auto">
+        <source src="ogg/bass.1.8.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.9" preload="auto">
+        <source src="ogg/bass.1.9.ogg" type="audio/ogg">
+      </audio>
+      <audio id="bass.1.10" preload="auto">
+        <source src="ogg/bass.1.10.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.1" preload="auto">
+        <source src="ogg/drum.1.1.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.2" preload="auto">
+        <source src="ogg/drum.1.2.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.3" preload="auto">
+        <source src="ogg/drum.1.3.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.4" preload="auto">
+        <source src="ogg/drum.1.4.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.5" preload="auto">
+        <source src="ogg/drum.1.5.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.6" preload="auto">
+        <source src="ogg/drum.1.6.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.7" preload="auto">
+        <source src="ogg/drum.1.7.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.8" preload="auto">
+        <source src="ogg/drum.1.8.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.9" preload="auto">
+        <source src="ogg/drum.1.9.ogg" type="audio/ogg">
+      </audio>
+      <audio id="drums.1.10" preload="auto">
+        <source src="ogg/drum.1.10.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.1" preload="auto">
+        <source src="ogg/sounds.1.1.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.2" preload="auto">
+        <source src="ogg/sounds.1.2.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.3" preload="auto">
+        <source src="ogg/sounds.1.3.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.4" preload="auto">
+        <source src="ogg/sounds.1.4.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.5" preload="auto">
+        <source src="ogg/sounds.1.5.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.6" preload="auto">
+        <source src="ogg/sounds.1.6.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.7" preload="auto">
+        <source src="ogg/sounds.1.7.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.8" preload="auto">
+        <source src="ogg/sounds.1.8.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.9" preload="auto">
+        <source src="ogg/sounds.1.9.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.10" preload="auto">
+        <source src="ogg/sounds.1.10.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.11" preload="auto">
+        <source src="ogg/sounds.1.11.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.12" preload="auto">
+        <source src="ogg/sounds.1.12.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.13" preload="auto">
+        <source src="ogg/sounds.1.13.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.14" preload="auto">
+        <source src="ogg/sounds.1.14.ogg" type="audio/ogg">
+      </audio>
+      <audio id="sounds.1.15" preload="auto">
+        <source src="ogg/sounds.1.15.ogg" type="audio/ogg">
+      </audio>
+    </div>
+  <title>Maxwell's Adventure Machine</title>
 </head>
 <body>
-<div>
-<h1 id="spotlight">Artist Spotlight</h1>
-<h2 class="yellowspot">Chance the Rapper</h2>
-<p id="first">This is a site about Chancelor Bennet.</p>
-<p>Artist name: Chance the Rapper aka lil Chano from the 79th.</p>
-</div>
-<div>
-	<form name="Favorite song!" action="thanks.html">
-	<div>
-      <label>What's your favorite Chance track?</label>
-      <input type="text" name="fav-track" placeholder="Track">
+
+  <h1>So fun</h1>
+  <div class="grid">
+    <div class="row-0 row">
+      <div class="cell-0-0 cell sounds"></div>
+      <div class="cell-1-0 cell sounds"></div>
+      <div class="cell-2-0 cell drums"></div>
+      <div class="cell-3-0 cell drums"></div>
+      <div class="cell-4-0 cell drums"></div>
+      <div class="cell-5-0 cell drums"></div>
     </div>
-	<button type="submit">Submit</button>
-	</form>
-</div>
-<div>
-	<p>
-	<a href="http://chanceraps.com/">Here's</a> Chance's website! It's nice. I recognize a lot of the html elements used.  <br>It looks like there's a script tag and some squarespace stuff which I am unfamiliar with. Script run javascript scripts. <br>I'm not sure how Squarespace works on sites.
-	</p>
-</div>
-<div>
-	<p><a href="https://images.alphacoders.com/664/664511.png">Here's</a> the image source.</p>
-</div>
-<div>
-	<img id="chancehead" alt="Chance's Face" src="chance4.png">
-</div>
+    <div class="row-1 row">
+      <div class="cell-0-1 cell sounds"></div>
+      <div class="cell-1-1 cell sounds"></div>
+      <div class="cell-2-1 cell sounds"></div>
+      <div class="cell-3-1 cell drums"></div>
+      <div class="cell-4-1 cell drums"></div>
+      <div class="cell-5-1 cell drums"></div>
+    </div>
+    <div class="row-2 row">
+      <div class="cell-0-2 cell bass"></div>
+      <div class="cell-1-2 cell sounds"></div>
+      <div class="cell-2-2 cell sounds"></div>
+      <div class="cell-3-2 cell sounds"></div>
+      <div class="cell-4-2 cell drums"></div>
+      <div class="cell-5-2 cell drums"></div>
+    </div>
+    <div class="row-3 row">
+      <div class="cell-0-3 cell bass"></div>
+      <div class="cell-1-3 cell bass"></div>
+      <div class="cell-2-3 cell sounds"></div>
+      <div class="cell-3-3 cell sounds"></div>
+      <div class="cell-4-3 cell sounds"></div>
+      <div class="cell-5-3 cell drums"></div>
+    </div>
+    <div class="row-4 row">
+      <div class="cell-0-4 cell bass"></div>
+      <div class="cell-1-4 cell bass"></div>
+      <div class="cell-2-4 cell bass"></div>
+      <div class="cell-3-4 cell sounds"></div>
+      <div class="cell-4-4 cell sounds"></div>
+      <div class="cell-5-4 cell sounds"></div>
+    </div>
+    <div class="row-5 row">
+      <div class="cell-0-5 cell bass"></div>
+      <div class="cell-1-5 cell bass"></div>
+      <div class="cell-2-5 cell bass"></div>
+      <div class="cell-3-5 cell bass"></div>
+      <div class="cell-4-5 cell sounds"></div>
+      <div class="cell-5-5 cell sounds"></div>
+    </div>
+  </div>
 </body>
 </html>
