set up sequencer

--- a/loadAudio.html
+++ b/loadAudio.html
@@ -1,106 +1,106 @@
-<audio id="bass.1.1" preload="auto">
+<audio id="bass_1_1" preload="auto">
   <source src="ogg/bass.1.1.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.2" preload="auto">
+<audio id="bass_1_2" preload="auto">
   <source src="ogg/bass.1.2.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.3" preload="auto">
+<audio id="bass_1_3" preload="auto">
   <source src="ogg/bass.1.3.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.4" preload="auto">
+<audio id="bass_1_4" preload="auto">
   <source src="ogg/bass.1.4.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.5" preload="auto">
+<audio id="bass_1_5" preload="auto">
   <source src="ogg/bass.1.5.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.6" preload="auto">
+<audio id="bass_1_6" preload="auto">
   <source src="ogg/bass.1.6.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.7" preload="auto">
+<audio id="bass_1_7" preload="auto">
   <source src="ogg/bass.1.7.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.8" preload="auto">
+<audio id="bass_1_8" preload="auto">
   <source src="ogg/bass.1.8.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.9" preload="auto">
+<audio id="bass_1_9" preload="auto">
   <source src="ogg/bass.1.9.ogg" type="audio/ogg">
 </audio>
-<audio id="bass.1.10" preload="auto">
+<audio id="bass_1_10" preload="auto">
   <source src="ogg/bass.1.10.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.1" preload="auto">
+<audio id="drums_1_1" preload="auto">
   <source src="ogg/drum.1.1.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.2" preload="auto">
+<audio id="drums_1_2" preload="auto">
   <source src="ogg/drum.1.2.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.3" preload="auto">
+<audio id="drums_1_3" preload="auto">
   <source src="ogg/drum.1.3.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.4" preload="auto">
+<audio id="drums_1_4" preload="auto">
   <source src="ogg/drum.1.4.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.5" preload="auto">
+<audio id="drums_1_5" preload="auto">
   <source src="ogg/drum.1.5.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.6" preload="auto">
+<audio id="drums_1_6" preload="auto">
   <source src="ogg/drum.1.6.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.7" preload="auto">
+<audio id="drums_1_7" preload="auto">
   <source src="ogg/drum.1.7.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.8" preload="auto">
+<audio id="drums_1_8" preload="auto">
   <source src="ogg/drum.1.8.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.9" preload="auto">
+<audio id="drums_1_9" preload="auto">
   <source src="ogg/drum.1.9.ogg" type="audio/ogg">
 </audio>
-<audio id="drums.1.10" preload="auto">
+<audio id="drums_1_10" preload="auto">
   <source src="ogg/drum.1.10.ogg" type="audio/ogg">
 </audio>
 
-<audio id="sounds.1.1" preload="auto">
+<audio id="sounds_1_1" preload="auto">
   <source src="ogg/sounds.1.1.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.2" preload="auto">
+<audio id="sounds_1_2" preload="auto">
   <source src="ogg/sounds.1.2.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.3" preload="auto">
+<audio id="sounds_1_3" preload="auto">
   <source src="ogg/sounds.1.3.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.4" preload="auto">
+<audio id="sounds_1_4" preload="auto">
   <source src="ogg/sounds.1.4.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.5" preload="auto">
+<audio id="sounds_1_5" preload="auto">
   <source src="ogg/sounds.1.5.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.6" preload="auto">
+<audio id="sounds_1_6" preload="auto">
   <source src="ogg/sounds.1.6.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.7" preload="auto">
+<audio id="sounds_1_7" preload="auto">
   <source src="ogg/sounds.1.7.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.8" preload="auto">
+<audio id="sounds_1_8" preload="auto">
   <source src="ogg/sounds.1.8.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.9" preload="auto">
+<audio id="sounds_1_9" preload="auto">
   <source src="ogg/sounds.1.9.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.10" preload="auto">
+<audio id="sounds_1_10" preload="auto">
   <source src="ogg/sounds.1.10.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.11" preload="auto">
+<audio id="sounds_1_11" preload="auto">
   <source src="ogg/sounds.1.11.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.12" preload="auto">
+<audio id="sounds_1_12" preload="auto">
   <source src="ogg/sounds.1.12.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.13" preload="auto">
+<audio id="sounds_1_13" preload="auto">
   <source src="ogg/sounds.1.13.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.14" preload="auto">
+<audio id="sounds_1_14" preload="auto">
   <source src="ogg/sounds.1.14.ogg" type="audio/ogg">
 </audio>
-<audio id="sounds.1.15" preload="auto">
+<audio id="sounds_1_15" preload="auto">
   <source src="ogg/sounds.1.15.ogg" type="audio/ogg">
 </audio>
