--- a/index.html
+++ b/index.html
@@ -5,113 +5,146 @@
     <link rel="stylesheet" type="text/css" href="css/application.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/application.js"></script>
-    <div id="load">
-      <audio id="bass.1.1" preload="auto">
-        <source src="ogg/bass.1.1.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.2" preload="auto">
-        <source src="ogg/bass.1.2.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.3" preload="auto">
-        <source src="ogg/bass.1.3.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.4" preload="auto">
-        <source src="ogg/bass.1.4.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.5" preload="auto">
-        <source src="ogg/bass.1.5.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.6" preload="auto">
-        <source src="ogg/bass.1.6.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.7" preload="auto">
-        <source src="ogg/bass.1.7.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.8" preload="auto">
-        <source src="ogg/bass.1.8.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.9" preload="auto">
-        <source src="ogg/bass.1.9.ogg" type="audio/ogg">
-      </audio>
-      <audio id="bass.1.10" preload="auto">
-        <source src="ogg/bass.1.10.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.1" preload="auto">
-        <source src="ogg/drum.1.1.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.2" preload="auto">
-        <source src="ogg/drum.1.2.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.3" preload="auto">
-        <source src="ogg/drum.1.3.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.4" preload="auto">
-        <source src="ogg/drum.1.4.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.5" preload="auto">
-        <source src="ogg/drum.1.5.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.6" preload="auto">
-        <source src="ogg/drum.1.6.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.7" preload="auto">
-        <source src="ogg/drum.1.7.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.8" preload="auto">
-        <source src="ogg/drum.1.8.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.9" preload="auto">
-        <source src="ogg/drum.1.9.ogg" type="audio/ogg">
-      </audio>
-      <audio id="drums.1.10" preload="auto">
-        <source src="ogg/drum.1.10.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.1" preload="auto">
-        <source src="ogg/sounds.1.1.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.2" preload="auto">
-        <source src="ogg/sounds.1.2.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.3" preload="auto">
-        <source src="ogg/sounds.1.3.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.4" preload="auto">
-        <source src="ogg/sounds.1.4.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.5" preload="auto">
-        <source src="ogg/sounds.1.5.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.6" preload="auto">
-        <source src="ogg/sounds.1.6.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.7" preload="auto">
-        <source src="ogg/sounds.1.7.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.8" preload="auto">
-        <source src="ogg/sounds.1.8.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.9" preload="auto">
-        <source src="ogg/sounds.1.9.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.10" preload="auto">
-        <source src="ogg/sounds.1.10.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.11" preload="auto">
-        <source src="ogg/sounds.1.11.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.12" preload="auto">
-        <source src="ogg/sounds.1.12.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.13" preload="auto">
-        <source src="ogg/sounds.1.13.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.14" preload="auto">
-        <source src="ogg/sounds.1.14.ogg" type="audio/ogg">
-      </audio>
-      <audio id="sounds.1.15" preload="auto">
-        <source src="ogg/sounds.1.15.ogg" type="audio/ogg">
-      </audio>
-    </div>
+    <audio id="bass_1_1" preload="auto">
+      <source src="ogg/bass.1.1.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_2" preload="auto">
+      <source src="ogg/bass.1.2.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_3" preload="auto">
+      <source src="ogg/bass.1.3.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_4" preload="auto">
+      <source src="ogg/bass.1.4.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_5" preload="auto">
+      <source src="ogg/bass.1.5.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_6" preload="auto">
+      <source src="ogg/bass.1.6.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_7" preload="auto">
+      <source src="ogg/bass.1.7.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_8" preload="auto">
+      <source src="ogg/bass.1.8.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_9" preload="auto">
+      <source src="ogg/bass.1.9.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="bass_1_10" preload="auto">
+      <source src="ogg/bass.1.10.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_1" preload="auto">
+      <source src="ogg/drum.1.1.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_2" preload="auto">
+      <source src="ogg/drum.1.2.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_3" preload="auto">
+      <source src="ogg/drum.1.3.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_4" preload="auto">
+      <source src="ogg/drum.1.4.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_5" preload="auto">
+      <source src="ogg/drum.1.5.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_6" preload="auto">
+      <source src="ogg/drum.1.6.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_7" preload="auto">
+      <source src="ogg/drum.1.7.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_8" preload="auto">
+      <source src="ogg/drum.1.8.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_9" preload="auto">
+      <source src="ogg/drum.1.9.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="drums_1_10" preload="auto">
+      <source src="ogg/drum.1.10.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_1" preload="auto">
+      <source src="ogg/sounds.1.1.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_2" preload="auto">
+      <source src="ogg/sounds.1.2.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_3" preload="auto">
+      <source src="ogg/sounds.1.3.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_4" preload="auto">
+      <source src="ogg/sounds.1.4.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_5" preload="auto">
+      <source src="ogg/sounds.1.5.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_6" preload="auto">
+      <source src="ogg/sounds.1.6.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_7" preload="auto">
+      <source src="ogg/sounds.1.7.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_8" preload="auto">
+      <source src="ogg/sounds.1.8.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_9" preload="auto">
+      <source src="ogg/sounds.1.9.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_10" preload="auto">
+      <source src="ogg/sounds.1.10.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_11" preload="auto">
+      <source src="ogg/sounds.1.11.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_12" preload="auto">
+      <source src="ogg/sounds.1.12.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_13" preload="auto">
+      <source src="ogg/sounds.1.13.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_14" preload="auto">
+      <source src="ogg/sounds.1.14.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+    <audio id="sounds_1_15" preload="auto">
+      <source src="ogg/sounds.1.15.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
   <title>Maxwell's Adventure Machine</title>
 </head>
 <body>
@@ -119,52 +152,52 @@
   <h1>So fun</h1>
   <div class="grid">
     <div class="row-0 row">
-      <div class="cell-0-0 cell sounds"></div>
-      <div class="cell-1-0 cell sounds"></div>
-      <div class="cell-2-0 cell drums"></div>
-      <div class="cell-3-0 cell drums"></div>
-      <div class="cell-4-0 cell drums"></div>
-      <div class="cell-5-0 cell drums"></div>
+      <div class="cell sounds" targetSound="sounds_1_1"></div>
+      <div class="cell sounds" targetSound="sounds_1_2"></div>
+      <div class="cell drums" targetSound="drums_1_1"></div>
+      <div class="cell drums" targetSound="drums_1_2"></div>
+      <div class="cell drums" targetSound="drums_1_3"></div>
+      <div class="cell drums" targetSound="drums_1_4"></div>
     </div>
     <div class="row-1 row">
-      <div class="cell-0-1 cell sounds"></div>
-      <div class="cell-1-1 cell sounds"></div>
-      <div class="cell-2-1 cell sounds"></div>
-      <div class="cell-3-1 cell drums"></div>
-      <div class="cell-4-1 cell drums"></div>
-      <div class="cell-5-1 cell drums"></div>
+      <div class="cell sounds" targetSound="sounds_1_3"></div>
+      <div class="cell sounds" targetSound="sounds_1_4"></div>
+      <div class="cell sounds" targetSound="sounds_1_5"></div>
+      <div class="cell drums" targetSound="drums_1_5"></div>
+      <div class="cell drums" targetSound="drums_1_6"></div>
+      <div class="cell drums" targetSound="drums_1_7"></div>
     </div>
     <div class="row-2 row">
-      <div class="cell-0-2 cell bass"></div>
-      <div class="cell-1-2 cell sounds"></div>
-      <div class="cell-2-2 cell sounds"></div>
-      <div class="cell-3-2 cell sounds"></div>
-      <div class="cell-4-2 cell drums"></div>
-      <div class="cell-5-2 cell drums"></div>
+      <div class="cell bass" targetSound="bass_1_1"></div>
+      <div class="cell sounds" targetSound="sounds_1_6"></div>
+      <div class="cell sounds" targetSound="sounds_1_7"></div>
+      <div class="cell sounds" targetSound="sounds_1_8"></div>
+      <div class="cell drums" targetSound="drums_1_8"></div>
+      <div class="cell drums" targetSound="drums_1_9"></div>
     </div>
     <div class="row-3 row">
-      <div class="cell-0-3 cell bass"></div>
-      <div class="cell-1-3 cell bass"></div>
-      <div class="cell-2-3 cell sounds"></div>
-      <div class="cell-3-3 cell sounds"></div>
-      <div class="cell-4-3 cell sounds"></div>
-      <div class="cell-5-3 cell drums"></div>
+      <div class="cell bass" targetSound="bass_1_2"></div>
+      <div class="cell bass" targetSound="bass_1_3"></div>
+      <div class="cell sounds" targetSound="sounds_1_9"></div>
+      <div class="cell sounds" targetSound="sounds_1_10"></div>
+      <div class="cell sounds"  targetSound="sounds_1_11"></div>
+      <div class="cell drums"  targetSound="drums_1_10"></div>
     </div>
     <div class="row-4 row">
-      <div class="cell-0-4 cell bass"></div>
-      <div class="cell-1-4 cell bass"></div>
-      <div class="cell-2-4 cell bass"></div>
-      <div class="cell-3-4 cell sounds"></div>
-      <div class="cell-4-4 cell sounds"></div>
-      <div class="cell-5-4 cell sounds"></div>
+      <div class="cell bass" targetSound="bass_1_4"></div>
+      <div class="cell bass" targetSound="bass_1_5"></div>
+      <div class="cell bass" targetSound="bass_1_6"></div>
+      <div class="cell sounds" targetSound="sounds_1_12"></div>
+      <div class="cell sounds" targetSound="sounds_1_13"></div>
+      <div class="cell sounds" targetSound="sounds_1_14"></div>
     </div>
     <div class="row-5 row">
-      <div class="cell-0-5 cell bass"></div>
-      <div class="cell-1-5 cell bass"></div>
-      <div class="cell-2-5 cell bass"></div>
-      <div class="cell-3-5 cell bass"></div>
-      <div class="cell-4-5 cell sounds"></div>
-      <div class="cell-5-5 cell sounds"></div>
+      <div class="cell bass" targetSound="bass_1_7"></div>
+      <div class="cell bass" targetSound="bass_1_8"></div>
+      <div class="cell bass" targetSound="bass_1_9"></div>
+      <div class="cell bass" targetSound="bass_1_10"></div>
+      <div class="cell sounds" targetSound="sounds_1_15"></div>
+      <div class="cell sounds" targetSound="sounds_1_16"></div>
     </div>
   </div>
 </body>
