--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/application.css">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/application.js"></script>
+    <div id="audioLoad"></div>
     <audio id="bass_1_1" preload="auto">
       <source src="ogg/bass.1.1.ogg" type="audio/ogg">
       Your browser does not support the audio tag.
@@ -148,8 +150,10 @@
   <title>Maxwell's Adventure Machine</title>
 </head>
 <body>
-
-  <h1>So fun</h1>
+  <div id="myProgress">
+    <div id="myBar"></div>
+  </div>
+  <p>Madeon</p>
   <div class="grid">
     <div class="row-0 row">
       <div class="cell sounds" targetSound="sounds_1_1"></div>
