--- a/index.html
+++ b/index.html
@@ -1,208 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/application.css">
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="js/application.js"></script>
-    <div id="audioLoad"></div>
-    <audio id="bass_1_1" preload="auto">
-      <source src="ogg/bass.1.1.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_2" preload="auto">
-      <source src="ogg/bass.1.2.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_3" preload="auto">
-      <source src="ogg/bass.1.3.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_4" preload="auto">
-      <source src="ogg/bass.1.4.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_5" preload="auto">
-      <source src="ogg/bass.1.5.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_6" preload="auto">
-      <source src="ogg/bass.1.6.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_7" preload="auto">
-      <source src="ogg/bass.1.7.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_8" preload="auto">
-      <source src="ogg/bass.1.8.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_9" preload="auto">
-      <source src="ogg/bass.1.9.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="bass_1_10" preload="auto">
-      <source src="ogg/bass.1.10.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_1" preload="auto">
-      <source src="ogg/drum.1.1.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_2" preload="auto">
-      <source src="ogg/drum.1.2.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_3" preload="auto">
-      <source src="ogg/drum.1.3.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_4" preload="auto">
-      <source src="ogg/drum.1.4.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_5" preload="auto">
-      <source src="ogg/drum.1.5.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_6" preload="auto">
-      <source src="ogg/drum.1.6.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_7" preload="auto">
-      <source src="ogg/drum.1.7.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_8" preload="auto">
-      <source src="ogg/drum.1.8.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_9" preload="auto">
-      <source src="ogg/drum.1.9.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="drums_1_10" preload="auto">
-      <source src="ogg/drum.1.10.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_1" preload="auto">
-      <source src="ogg/sounds.1.1.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_2" preload="auto">
-      <source src="ogg/sounds.1.2.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_3" preload="auto">
-      <source src="ogg/sounds.1.3.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_4" preload="auto">
-      <source src="ogg/sounds.1.4.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_5" preload="auto">
-      <source src="ogg/sounds.1.5.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_6" preload="auto">
-      <source src="ogg/sounds.1.6.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_7" preload="auto">
-      <source src="ogg/sounds.1.7.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_8" preload="auto">
-      <source src="ogg/sounds.1.8.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_9" preload="auto">
-      <source src="ogg/sounds.1.9.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_10" preload="auto">
-      <source src="ogg/sounds.1.10.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_11" preload="auto">
-      <source src="ogg/sounds.1.11.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_12" preload="auto">
-      <source src="ogg/sounds.1.12.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_13" preload="auto">
-      <source src="ogg/sounds.1.13.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_14" preload="auto">
-      <source src="ogg/sounds.1.14.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-    <audio id="sounds_1_15" preload="auto">
-      <source src="ogg/sounds.1.15.ogg" type="audio/ogg">
-      Your browser does not support the audio tag.
-    </audio>
-  <title>Maxwell's Adventure Machine</title>
+  <title>Maxwell Workman</title>
 </head>
 <body>
-  <div id="myProgress">
-    <div id="myBar"></div>
-  </div>
-  <p>Madeon</p>
-  <div class="grid">
-    <div class="row-0 row">
-      <div class="cell sounds" targetSound="sounds_1_1"></div>
-      <div class="cell sounds" targetSound="sounds_1_2"></div>
-      <div class="cell drums" targetSound="drums_1_1"></div>
-      <div class="cell drums" targetSound="drums_1_2"></div>
-      <div class="cell drums" targetSound="drums_1_3"></div>
-      <div class="cell drums" targetSound="drums_1_4"></div>
-    </div>
-    <div class="row-1 row">
-      <div class="cell sounds" targetSound="sounds_1_3"></div>
-      <div class="cell sounds" targetSound="sounds_1_4"></div>
-      <div class="cell sounds" targetSound="sounds_1_5"></div>
-      <div class="cell drums" targetSound="drums_1_5"></div>
-      <div class="cell drums" targetSound="drums_1_6"></div>
-      <div class="cell drums" targetSound="drums_1_7"></div>
-    </div>
-    <div class="row-2 row">
-      <div class="cell bass" targetSound="bass_1_1"></div>
-      <div class="cell sounds" targetSound="sounds_1_6"></div>
-      <div class="cell sounds" targetSound="sounds_1_7"></div>
-      <div class="cell sounds" targetSound="sounds_1_8"></div>
-      <div class="cell drums" targetSound="drums_1_8"></div>
-      <div class="cell drums" targetSound="drums_1_9"></div>
-    </div>
-    <div class="row-3 row">
-      <div class="cell bass" targetSound="bass_1_2"></div>
-      <div class="cell bass" targetSound="bass_1_3"></div>
-      <div class="cell sounds" targetSound="sounds_1_9"></div>
-      <div class="cell sounds" targetSound="sounds_1_10"></div>
-      <div class="cell sounds"  targetSound="sounds_1_11"></div>
-      <div class="cell drums"  targetSound="drums_1_10"></div>
-    </div>
-    <div class="row-4 row">
-      <div class="cell bass" targetSound="bass_1_4"></div>
-      <div class="cell bass" targetSound="bass_1_5"></div>
-      <div class="cell bass" targetSound="bass_1_6"></div>
-      <div class="cell sounds" targetSound="sounds_1_12"></div>
-      <div class="cell sounds" targetSound="sounds_1_13"></div>
-      <div class="cell sounds" targetSound="sounds_1_14"></div>
-    </div>
-    <div class="row-5 row">
-      <div class="cell bass" targetSound="bass_1_7"></div>
-      <div class="cell bass" targetSound="bass_1_8"></div>
-      <div class="cell bass" targetSound="bass_1_9"></div>
-      <div class="cell bass" targetSound="bass_1_10"></div>
-      <div class="cell sounds" targetSound="sounds_1_15"></div>
-      <div class="cell sounds" targetSound="sounds_1_16"></div>
-    </div>
-  </div>
+<div>
+  <nav>
+    <ul>
+      <li>Resume</li>
+      <li>Projects</li>
+    </ul>
+  </nav>
+</div>
 </body>
 </html>
