--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <title>Maxwell Workman</title>
 </head>
 <body>
+<div id="background">
+  <canvas id="timebeach">
+    
+  </canvas>
+</div>
 <div>
   <nav>
     <ul>
@@ -13,4 +18,10 @@
   </nav>
 </div>
 </body>
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/application.css">
+  <script src="js/application.js"></script>
+<noscript><link href="main.css" rel="stylesheet"></noscript>
+
 </html>
