Finished particle animations

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
   <title>Maxwell Workman</title>
 </head>
 <body>
+<output id="out"></output>
 <div id="background">
-  <canvas id="timebeach">
+  <canvas id="solids">
+    
+  </canvas>
+  <canvas id="stars">
+
+  </canvas>
+  <canvas id="sparkles">
     
   </canvas>
 </div>
@@ -19,6 +26,7 @@
 </div>
 </body>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/application.css">
   <script src="js/application.js"></script>
