Add sinitial color tweenr tweening.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <div id="mainCcontainer">
 <output id="out"></output>
   <div id="background">
+    <div id="sky"></div>
+    <div id="ocean"></div>
     <canvas id="solids">
       
     </canvas>
@@ -44,6 +46,7 @@
 </div>
 </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/ColorPropsPlugin.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
