Fix stars part 2.  Added nav bar color tween.

--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
   </div>
   <div id="tabular-content">
     <div id="About">
-      <p>I like building interactive and fun sites.  I also like building static sites, just not as much.  </p>
+      <p>I like building interactive and fun sites. Love to have conversations about design philosophies be it web, video game, interior, etc. I listen to a lot of music everyday<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fwaxmorkman&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe>. 
+      </p>
     </div>
     <div id="Resume">
       <iframe src="https://drive.google.com/file/d/0B6H1FbMXbxBYaDlrcmtVMDlhanc/preview" width="640" height="480"></iframe>
     </div>
     <div id="Projects">
+    <div class="project-window"></div>
       
     </div>
     <div id="Contact">
       <div>Maxwell Workman</div>
-      <div></div>
+      <div>maxwell.workman@gmail.com</div>
     </div>
     
   </div>
